<resources>
    <!-- App info -->
    <string name="app_name">Niju</string>
    <string name="subtitle">English</string>

    <string name="default_web_client_id">1073180074577-7qf9b7qkvmdfenauj4d0pljic9gb6h7u.apps.googleusercontent.com</string>
    <string name="loading_text">Loading...</string>
    <string name="desc_top_decoration">Top decoration</string>
    <string name="desc_bottom_decoration">Bottom decoration</string>
    <string name="desc_logo">App logo</string>

    <!-- Activity titles -->
    <string name="title_activity_login">LoginActivity</string>

    <!-- Prompts -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Actions -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="btn_login">Log In</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Messages -->
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt; 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="contexto_icon">Contextual Icon</string>
    <string name="logo" />
    <string name="point1" />
    <string name="show_password" />
</resources>
