<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1F3FF"
    tools:context=".SplashActivity">

    <!-- Form superior -->
    <ImageView
        android:id="@+id/topDecoration"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/top_shape"
        android:contentDescription="@string/desc_top_decoration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Form inferior -->
    <ImageView
        android:id="@+id/bottomDecoration"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginBottom="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/bottom_shape"
        android:contentDescription="@string/desc_bottom_decoration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Cont de tít -->
    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topDecoration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="166dp"
        android:layout_height="244dp"
        android:contentDescription="@string/desc_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleContainer"
        app:srcCompat="@drawable/logo_sin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="103dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:indeterminate="true"
        android:indeterminateTint="#5865F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/loading_text"
        android:textColor="#6B7280"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="176dp"
        android:layout_height="211dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="193dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textColor="#5865F2"
            android:textSize="96sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/subtitle"
            android:textColor="#6B7280"
            android:textSize="35sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
